# libftxf

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libftxf-wiki.ini  libftxf.ini  libftxf.pc.in  libftxf.spec.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.github/workflows/: build_ossfuzz.yml
.travis/: runtests.sh  script.sh
common/: config_winapi.h  memory.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libftxf.h.in
include/libftxf/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libftxf/: Makefile.am  ftxf_record.h  libftxf.c  libftxf.rc.in  libftxf_debug.c  libftxf_debug.h  libftxf_definitions.h.in  libftxf_error.c  libftxf_error.h  libftxf_extern.h  libftxf_libcerror.h  libftxf_libcnotify.h  libftxf_libcstring.h  libftxf_libfdatetime.h  libftxf_libfguid.h  libftxf_libfole.h  libftxf_libfusn.h  libftxf_libuna.h  libftxf_record.c  libftxf_record.h  libftxf_support.c  libftxf_support.h  libftxf_types.h  libftxf_unused.h
manuals/: Makefile.am  libftxf.3
msvscpp/: Makefile.am  libftxf.sln
msvscpp/ftxf_test_error/: ftxf_test_error.vcproj
msvscpp/ftxf_test_get_version/: ftxf_test_get_version.vcproj
msvscpp/ftxf_test_record/: ftxf_test_record.vcproj
msvscpp/ftxf_test_support/: ftxf_test_support.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libftxf/: libftxf.vcproj
msvscpp/libfusn/: libfusn.vcproj
msvscpp/libuna/: libuna.vcproj
ossfuzz/: Makefile.am  ossfuzz_libftxf.h  record_fuzzer.cc
tests/: Makefile.am  ftxf_test_error.c  ftxf_test_get_version.c  ftxf_test_libcerror.h  ftxf_test_libcstring.h  ftxf_test_libftxf.h  ftxf_test_macros.h  ftxf_test_memory.c  ftxf_test_memory.h  ftxf_test_record.c  ftxf_test_support.c  ftxf_test_unused.h  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at
tests/data/: record.1
