include_HEADERS = \
	libftxf.h

pkginclude_HEADERS = \
	libftxf/codepage.h \
	libftxf/definitions.h \
	libftxf/error.h \
	libftxf/extern.h \
	libftxf/features.h \
	libftxf/types.h

EXTRA_DIST = \
	libftxf.h.in \
	libftxf/definitions.h.in \
	libftxf/features.h.in \
	libftxf/types.h.in

DISTCLEANFILES = \
	libftxf.h \
	libftxf/definitions.h \
	libftxf/features.h \
	libftxf/types.h \
	Makefile \
	Makefile.in

