MSVSCPP_FILES = \
	ftxf_test_error/ftxf_test_error.vcproj \
	ftxf_test_get_version/ftxf_test_get_version.vcproj \
	ftxf_test_record/ftxf_test_record.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libftxf/libftxf.vcproj \
	libfusn/libfusn.vcproj \
	libuna/libuna.vcproj \
	libftxf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

