MSVSCPP_FILES = \
	ftxf_test_error/ftxf_test_error.vcproj \
	ftxf_test_record/ftxf_test_record.vcproj \
	ftxf_test_support/ftxf_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libftxf/libftxf.vcproj \
	libfusn/libfusn.vcproj \
	libuna/libuna.vcproj \
	libftxf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

